Bugfix: svg not displaying on iOS devices

--- a/src/components/hero/hero.module.css
+++ b/src/components/hero/hero.module.css
@@ -8,3 +8,8 @@
   justify-content: center;
   height: 70vh;
 }
+
+.hero svg {
+  width: 100%;
+  max-height: 100%;
+}
